# pyadolc

./: .adolcrc  .gitignore  .sconsign.dblite  Doxyfile  KNOWN_BUGS_AND_PITFALLS.rst  Makefile  README  README.rst  SConstruct  SConstruct.EXAMPLE  SConstruct.old  adolc.py  ap.py  benchmark.cpp  benchmark.py  bootstrap.sh  my_hov_reverse.py  num_util.cpp  num_util.h  num_util.os  py_adolc.cpp  py_adolc.cpp~  py_adolc.hpp  py_adolc.os  py_colpack.cpp  py_colpack.hpp  python_extension_for_adolc.kdevelop  python_extension_for_adolc.kdevelop.filelist  run_tests.py  setup.py  setup.py.EXAMPLE  sparse.py  test.cpp  test.py  unit_test.py  unit_test_documentation.py
adolc/: SConscript  __init__.py  cgraph.py  finitedifferences.py  interpolation.py  linalg.py  tangent.py  wrapped_functions.py
adolc-1.11.0-trunk/: README
adolc-2.0.0/: .gitignore  AUTHORS  BUGS  COPYING  Makefile  Makefile.am  Makefile.win  README  config.status  configure  configure.ac  libtool  make_32  make_64
adolc-2.0.0/adolc/: Makefile  Makefile.am  Makefile.in  adalloc.c  adalloc.lo  adolc.h  adouble.cpp  adouble.h  adouble.h~  adouble.lo  adutils.h  buffer_temp.h  checkpointing.cpp  checkpointing.lo  checkpointing_p.h  common.h  config.h  convolut.c  convolut.h  convolut.lo  dvlparms.h  externfcts.cpp  externfcts.lo  externfcts_p.h  fixpoint.cpp  fixpoint.h  fixpoint.lo  fo_rev.c  fortutils.c  fortutils.lo  forward_partx.c  forward_partx.lo  fos_forward.c  fos_forward.lo  fos_reverse.c  fos_reverse.lo  fov_forward.c  fov_forward.lo  fov_offset_forward.c  fov_offset_forward.lo  (+44 more)
adolc-2.0.0/adolc/.deps/: adalloc.Plo  adouble.Plo  checkpointing.Plo  convolut.Plo  externfcts.Plo  fixpoint.Plo  fortutils.Plo  forward_partx.Plo  fos_forward.Plo  fos_reverse.Plo  fov_forward.Plo  fov_offset_forward.Plo  fov_reverse.Plo  hos_forward.Plo  hos_ov_reverse.Plo  hos_reverse.Plo  hov_forward.Plo  hov_reverse.Plo  hov_wk_forward.Plo  interfaces.Plo  interfacesf.Plo  malloc.Plo  revolve.Plo  tape_handling.Plo  taping.Plo  zos_forward.Plo
adolc-2.0.0/adolc/drivers/: Makefile  Makefile.am  Makefile.in  drivers.c  drivers.lo  driversf.c  driversf.lo  libdrivers.la  odedrivers.c  odedrivers.h  odedrivers.lo  odedriversf.c  odedriversf.lo  taylor.c  taylor.h  taylor.lo
adolc-2.0.0/adolc/drivers/.deps/: drivers.Plo  driversf.Plo  odedrivers.Plo  odedriversf.Plo  taylor.Plo
adolc-2.0.0/adolc/sparse/: Makefile  Makefile.am  Makefile.in  sparse_fo_rev.cpp  sparsedrivers.cpp  sparsedrivers.h
adolc-2.0.0/adolc/tapedoc/: Makefile  Makefile.am  Makefile.in  libtapedoc.la  tapedoc.c  tapedoc.lo
adolc-2.0.0/adolc/tapedoc/.deps/: tapedoc.Plo
adolc-2.0.0/doc/: Makefile  Makefile.am  adolc-20.ps  short_ref.ps
adolc-2.0.0/examples/: Makefile  Makefile.am  Makefile.in  Makefile.win  README  detexam.cpp  odexam.cpp  powexam.cpp  speelpenning.cpp  tapeless_scalar.cpp  tapeless_vector.cpp
adolc-2.0.0/examples/additional_examples/: Makefile  Makefile.am
adolc-2.0.0/examples/additional_examples/checkpointing/: Makefile  Makefile.am  Makefile.in  README  checkpointing.cpp
adolc-2.0.0/examples/additional_examples/clock/: Makefile  Makefile.am  myclock.cpp  myclock.h
adolc-2.0.0/examples/additional_examples/detexam/: Makefile  Makefile.am  Makefile.in  README  detexam-old.cpp  detexam.cpp
adolc-2.0.0/examples/additional_examples/ext_diff_func/: Makefile  Makefile.am  Makefile.in  README  ext_diff_func.cpp
adolc-2.0.0/examples/additional_examples/fixpoint_exam/: Makefile  Makefile.am  Makefile.in  README  fixpoint_exam.cpp
adolc-2.0.0/examples/additional_examples/helm/: Makefile  Makefile.am  Makefile.in  README  helm-auto-exam.cpp  helm-diff-exam.cpp
adolc-2.0.0/examples/additional_examples/hessmat/: Makefile  Makefile.am  Makefile.in  README  hessmat.cpp
adolc-2.0.0/examples/additional_examples/lighthouse/: Makefile  Makefile.am  Makefile.in  README  cubic-2.cpp  cubic-iter-2.cpp  cubic-iter.cpp  cubic.cpp
adolc-2.0.0/examples/additional_examples/lufact/: LU.cpp  LU.h  LUdet.cpp  LUsolve.cpp  Makefile  Makefile.am  Makefile.in  README
adolc-2.0.0/examples/additional_examples/ode/: Makefile  Makefile.am  Makefile.in  README  vfunc_eutroph.cpp  vfunc_fic.cpp  vfunc_robertson.cpp  vgenodemain.cpp
adolc-2.0.0/examples/additional_examples/openmp_exam/: Makefile  Makefile.am  Makefile.in  README  liborpar.cpp  liborser.cpp
adolc-2.0.0/examples/additional_examples/pow/: Makefile  Makefile.am  Makefile.in  README  powexam.cpp
adolc-2.0.0/examples/additional_examples/scal/: Makefile  Makefile.am  Makefile.in  README  scalexam.cpp
adolc-2.0.0/examples/additional_examples/sparse/: Makefile  Makefile.am  Makefile.in  README  jacpatexam.cpp  sparse_hessian.cpp  sparse_jacobian.cpp
adolc-2.0.0/examples/additional_examples/speelpenning/: Makefile  Makefile.am  Makefile.in  README  speelpenning.cpp
adolc-2.0.0/examples/additional_examples/tapesave/: Makefile  Makefile.am  Makefile.in  README  createTape.cpp  useTape.cpp
adolc-2.0.0/examples/additional_examples/taylor/: Makefile  Makefile.am  Makefile.in  README  accessexam.cpp  coordinates.cpp  inversexam.cpp  taylorexam.cpp  trigger.cpp
adolc-2.0.0/examples/additional_examples/timing/: Makefile  Makefile.am  Makefile.in  README  rotations.cpp  rotations.h  sfunc_determinant.cpp  sfunc_experimental.cpp  sfunc_griewank.cpp  sfunc_helmholtz.cpp  sfunc_michalewitz.cpp  sfunc_power.cpp  sfunc_rosenbrock.cpp  sfunc_speelpenning.cpp  sgenmain.cpp  vfunc_gear.cpp  vfunc_pargear.cpp  vfunc_shuttle.cpp  vfunc_simplevec.cpp  vgenmain.cpp
adolc-2.0.0/include/adolc/: adalloc.h  adolc.h  adolc_openmp.h  adutilsc.h  checkpointing.h  externfcts.h  fortutils.h  interfaces.h  oplate.h  revolve.h  usrparms.h
adolc-2.0.0/include/adolc/drivers/: drivers.h
adolc-2.0.0/include/adolc/sparse/: sparse_fo_rev.h
adolc-2.0.0/include/adolc/tapedoc/: tapedoc.h
examples/: comparison_with_sympy.py  explicit_euler.py  qr_decomposition.py  sparse_jacobi_matrix.py  using_pyadolc_with_pyipopt.py
tests/: .gitignore  complicated_tests.py  experimental_tests.py  future_tests.py  jac_pat.mtx  (+3 more)
(+62 files in other folders)
