##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am 262 2008-12-03 07:49:30Z awalther $
##
## Copyright (C) 2004
##               Technical University Dresden
##               Department of Mathematics
##               Institute of Scientific Computing
##############################################################################

MAINTAINERCLEANFILES = Makefile.in *.aux *.dvi *.log *.toc *~ *.orig \
                       adolc-*.pdf adolc-*.ps

EXTRA_DIST           = adolc-20.ps adolc-20.pdf short_ref.ps short_ref.pdf
